// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IsMoney validation checks max 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsMoney": "Provided object ({\\"amount\\":2400,\\"currency\\":\\"EUR\\"}) is too a valid Money object",
    },
    "property": "price",
    "target": GuineaPig {
      "price": Object {
        "amount": 2400,
        "currency": "EUR",
      },
    },
    "value": Object {
      "amount": 2400,
      "currency": "EUR",
    },
  },
]
`;

exports[`IsMoney validation checks min 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsMoney": "Provided object ({\\"amount\\":-2000,\\"currency\\":\\"USD\\"}) is too a valid Money object",
    },
    "property": "price",
    "target": CustomGuineaPig {
      "price": Object {
        "amount": -2000,
        "currency": "USD",
      },
    },
    "value": Object {
      "amount": -2000,
      "currency": "USD",
    },
  },
]
`;

exports[`IsMoney validation rejects currency which is not in the custom list 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsMoney": "Provided object ({\\"amount\\":100,\\"currency\\":\\"BYN\\"}) is too a valid Money object",
    },
    "property": "price",
    "target": CustomGuineaPig {
      "price": Object {
        "amount": 100,
        "currency": "BYN",
      },
    },
    "value": Object {
      "amount": 100,
      "currency": "BYN",
    },
  },
]
`;

exports[`IsMoney validation rejects invalid class 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsMoney": "Provided object ({\\"amount\\":\\"Enough\\",\\"currency\\":\\"Gold\\"}) is too a valid Money object",
    },
    "property": "price",
    "target": GuineaPig {
      "price": Object {
        "amount": "Enough",
        "currency": "Gold",
      },
    },
    "value": Object {
      "amount": "Enough",
      "currency": "Gold",
    },
  },
]
`;

exports[`IsMoney validation rejects negative by default 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "IsMoney": "Provided object ({\\"amount\\":-2400,\\"currency\\":\\"EUR\\"}) is too a valid Money object",
    },
    "property": "price",
    "target": GuineaPig {
      "price": Object {
        "amount": -2400,
        "currency": "EUR",
      },
    },
    "value": Object {
      "amount": -2400,
      "currency": "EUR",
    },
  },
]
`;
